Added rainbow mode

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
             <section id="canva"></section>
             <section id="buttons">
                 <button id="clear">Clear</button>
-                <div>Color: <input id="colorButton" type="color"></div>
-                <button id="rainbow">Rainbow mode</button>
+                <div>Color:</div>
+                <input id="colorButton" type="color">
+                <button id="rainbowButton">Rainbow mode</button>
+                <div>Pixel size:</div>
                 <input id="gridSize" type="range" min="8" max="64" value="16">
+                <button id="eraser">Eraser</button>
             </section>
         </div>
 </body>
