Grid size problem on reload fixed

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <button id="rainbowButton">Rainbow mode</button>
                 <div>Pixel size:</div>
                 <input id="gridSize" type="range" min="8" max="64" value="16">
+                <button id="pencil">Pencil mode</button>
                 <button id="eraser">Eraser</button>
             </section>
         </div>
