--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <section id="canva"></section>
             <section id="buttons">
                 <button id="clear">Clear</button>
-                <div>Color:</div>
+                <div>Custom color:</div>
                 <input id="colorButton" type="color">
                 <button id="rainbowButton">Rainbow mode</button>
                 <div>Pixel size:</div>
